--- a/internett/index.html
+++ b/internett/index.html
@@ -10,13 +10,13 @@
         <div id="sticky">
             <div id="meny">
                 <div class="tekstmeny">
-                    <a class="a_meny" href="../Uke 44/index.html">Gå til toppen</a>
+                    <a class="a_meny" href="index.html">Gå til toppen</a>
                 </div>
                 <div class="tekstmeny">
-                    <a class="a_meny" href="../Uke 44/internett.html">Internett</a>
+                    <a class="a_meny" href="internett.html">Internett</a>
                 </div>
                 <div class="tekstmeny">
-                    <a class="a_meny" href="../Uke 44/kilder.html">Kilder</a>
+                    <a class="a_meny" href="kilder.html">Kilder</a>
                 </div>
             </div>
         
