--- a/internett/kilder.html
+++ b/internett/kilder.html
@@ -11,13 +11,13 @@
             <div id="meny">
 
                 <div class="tekstmeny">
-                <a class="a_meny" href="../Uke 44/kilder.html">Gå til toppen</a>
+                <a class="a_meny" href="kilder.html">Gå til toppen</a>
                 </div>
                 <div class="tekstmeny">
-                <a class="a_meny" href="../Uke 44/index.html">Hjem</a>
+                <a class="a_meny" href="index.html">Hjem</a>
                 </div>
                 <div class="tekstmeny">
-                    <a class="a_meny" href="../Uke 44/internett.html">Internett</a>
+                    <a class="a_meny" href="internett.html">Internett</a>
                 </div>
             </div>
         </div>
