--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>TEST</h1>
-    <p>Dette er en test</p>
+    <h1>Welcome!</h1>
+    <p>This website is made by Philip Godager</p>
 </body>
 </html>
