--- a/informasjon.html
+++ b/informasjon.html
@@ -33,9 +33,14 @@
         <br>
         <br>
         <div id="hoved">
-            <div class="boks">
-                <h1>Index</h1>
-                <p>Internett og digital kommunikasjon er noe de fleste bruker daglig. Selv om det føles ut som en selvfølge at alt fungerer, er det spennende å forstå hvordan det faktisk fungerer. <a href="internett.html">Les mer her</a></p>
+            <div>
+                <h1 id="overskrift">Informasjon</h1>
+                <br>
+                <p class="informasjon_topp">Nadderud sjakklubb er en av mange klubber på Nadderud vgs. Det er ingen obligatoriske møter, men det er veldig hyggelig hvis man blir med!</p>
+                <h2 class="underoverskrift">Generelt</h2>
+                <ul>
+                    <li class="informasjon">Møtelokaler: Gjønnesjordet 30, 1357 Bekkestua (Nadderud vgs. bibliotek)</li>
+                </ul>
             </div>
         </div>  
 
