--- a/påmelding.html
+++ b/påmelding.html
@@ -33,9 +33,13 @@
         <br>
         <br>
         <div id="hoved">
-            <div class="boks">
-                <h1>Index</h1>
-                <p>Internett og digital kommunikasjon er noe de fleste bruker daglig. Selv om det føles ut som en selvfølge at alt fungerer, er det spennende å forstå hvordan det faktisk fungerer. <a href="internett.html">Les mer her</a></p>
+            <div>
+                <h1 id="overskrift">Påmelding</h1>
+                <br>
+                <h2 class="underoverskrift">Påmelding</h2>
+                <ul>
+                    <li class="informasjon">Meld deg på <a href="https://forms.gle/7kXy6WexM2HyeJyAA" target="blank">her</a></li>
+                </ul>
             </div>
         </div>  
 
