--- a/nadderud_sjakklubb/index.html
+++ b/nadderud_sjakklubb/index.html
@@ -33,7 +33,7 @@
         <br>
         <br>
         <div id="hoved">
-            <div class="boks">
+            <div class="overskrift">
                 <h1>Index</h1>
                 <p>Internett og digital kommunikasjon er noe de fleste bruker daglig. Selv om det føles ut som en selvfølge at alt fungerer, er det spennende å forstå hvordan det faktisk fungerer. <a href="internett.html">Les mer her</a></p>
             </div>
