--- a/nadderud_sjakklubb/informasjon.html
+++ b/nadderud_sjakklubb/informasjon.html
@@ -34,13 +34,20 @@
         <br>
         <div id="hoved">
             <div>
-                <h1 id="overskrift">Informasjon</h1>
+                <h1 class="overskrift">Informasjon</h1>
                 <br>
                 <p class="informasjon_topp">Nadderud sjakklubb er en av mange klubber på Nadderud vgs. Det er ingen obligatoriske møter, men det er veldig hyggelig hvis man blir med!</p>
                 <h2 class="underoverskrift">Generelt</h2>
                 <ul>
                     <li class="informasjon">Møtelokaler: Gjønnesjordet 30, 1357 Bekkestua (Nadderud vgs. bibliotek)</li>
+                    <li class="informasjon">Tidspunkt: tirsdager kl. 11.35-12.20</li>
                 </ul>
+                <h2 class="underoverskrift">Kontakt</h2>
+                <ul>
+                    <li class="informasjon"><b>Philip Godager</b>, leder:
+                    <br>
+                    <a href="tel:47716980">47716980</a>,  <a href="mailto: philip1014@outlook.com">philip1014@outlook.com</a>
+                </li>
             </div>
         </div>  
 
