--- a/nadderud_sjakklubb/påmelding.html
+++ b/nadderud_sjakklubb/påmelding.html
@@ -34,9 +34,8 @@
         <br>
         <div id="hoved">
             <div>
-                <h1 id="overskrift">Påmelding</h1>
+                <h1 class="overskrift">Påmelding</h1>
                 <br>
-                <h2 class="underoverskrift">Påmelding</h2>
                 <ul>
                     <li class="informasjon">Meld deg på <a href="https://forms.gle/7kXy6WexM2HyeJyAA" target="blank">her</a></li>
                 </ul>
