--- a/nadderud_sjakklubb/index.html
+++ b/nadderud_sjakklubb/index.html
@@ -33,9 +33,9 @@
         <br>
         <br>
         <div id="hoved">
-            <div class="overskrift">
-                <h1>Index</h1>
-                <p>Internett og digital kommunikasjon er noe de fleste bruker daglig. Selv om det føles ut som en selvfølge at alt fungerer, er det spennende å forstå hvordan det faktisk fungerer. <a href="internett.html">Les mer her</a></p>
+            <div>
+                <h1 class="overskrift">Index</h1>
+                <p class="informasjon_topp">Internett og digital kommunikasjon er noe de fleste bruker daglig. Selv om det føles ut som en selvfølge at alt fungerer, er det spennende å forstå hvordan det faktisk fungerer. <a href="internett.html">Les mer her</a></p>
             </div>
         </div>  
 
