--- a/nadderud_sjakklubb/index.html
+++ b/nadderud_sjakklubb/index.html
@@ -20,7 +20,7 @@
                 <br>
                 <li><a href="informasjon.html">Informasjon</a></li>
                 <li ><a href="påmelding.html">Påmelding</a></li>
-                <li><a href="#">Bilder</a></li>
+                <li><a href="program.html">Program</a></li>
                 <li><a href="sjakknøtter.html">Sjakknøtter</a></li>
             </ul>
             <a href="#" class="burger-meny">
@@ -35,7 +35,7 @@
         <div id="hoved">
             <div>
                 <h1 class="overskrift">Index</h1>
-                <p class="informasjon_topp">Internett og digital kommunikasjon er noe de fleste bruker daglig. Selv om det føles ut som en selvfølge at alt fungerer, er det spennende å forstå hvordan det faktisk fungerer. <a href="internett.html">Les mer her</a></p>
+                <p class="informasjon_topp">Velkommen til Nadderud sjakklubb! Les mer om klubben <a href="informasjon.html"> her</a></p>
             </div>
         </div>  
 
