--- a/nadderud_sjakklubb/informasjon.html
+++ b/nadderud_sjakklubb/informasjon.html
@@ -20,7 +20,7 @@
                 <br>
                 <li><a href="informasjon.html">Informasjon</a></li>
                 <li ><a href="påmelding.html">Påmelding</a></li>
-                <li><a href="#">Bilder</a></li>
+                <li><a href="program.html">Program</a></li>
                 <li><a href="sjakknøtter.html">Sjakknøtter</a></li>
             </ul>
             <a href="#" class="burger-meny">
