--- a/nadderud_sjakklubb/påmelding.html
+++ b/nadderud_sjakklubb/påmelding.html
@@ -20,7 +20,7 @@
                 <br>
                 <li><a href="informasjon.html">Informasjon</a></li>
                 <li ><a href="påmelding.html">Påmelding</a></li>
-                <li><a href="#">Bilder</a></li>
+                <li><a href="program.html">Program</a></li>
                 <li><a href="sjakknøtter.html">Sjakknøtter</a></li>
             </ul>
             <a href="#" class="burger-meny">
@@ -35,6 +35,7 @@
         <div id="hoved">
             <div>
                 <h1 class="overskrift">Påmelding</h1>
+                <p class="informasjon_topp">Det er bare å melde seg på, det er ikke bindende, men bare for å ha litt kontroll på hvor mange som er med i klubben.</p>
                 <br>
                 <ul>
                     <li class="informasjon">Meld deg på <a href="https://forms.gle/7kXy6WexM2HyeJyAA" target="blank">her</a></li>
