--- a/nadderud_sjakklubb/sjakknøtter.html
+++ b/nadderud_sjakklubb/sjakknøtter.html
@@ -20,7 +20,7 @@
                 <br>
                 <li><a href="informasjon.html">Informasjon</a></li>
                 <li ><a href="påmelding.html">Påmelding</a></li>
-                <li><a href="#">Bilder</a></li>
+                <li><a href="program.html">Program</a></li>
                 <li><a href="sjakknøtter.html">Sjakknøtter</a></li>
             </ul>
             <a href="#" class="burger-meny">
@@ -332,6 +332,13 @@
     <div id="løsning2">
         Først flytter Dronning til a3. Siden det da blir sjakk, og kongen ikke har noen steder å flykte, må svart blokkere med noe. For eksempel blokkerer svart med tårnet til d6. Deretter slår dronningen tårnet på d6 og dermed er det sjakk matt. (På sjakkspråk: Da3+, Td6, Dxd6#)
         </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
 
     <script src="script.js"></script>
 </body>
