--- a/nadderud_sjakklubb/påmelding.html
+++ b/nadderud_sjakklubb/påmelding.html
@@ -35,7 +35,7 @@
         <div id="hoved">
             <div>
                 <h1 class="overskrift">Påmelding</h1>
-                <p class="informasjon_topp">Det er bare å melde seg på, det er ikke bindende, men bare for å ha litt kontroll på hvor mange som er med i klubben.</p>
+                <p class="informasjon_topp">Det er bare å melde seg på, det er ikke bindende, men bare for å ha litt kontroll på hvor mange som er med i klubben</p>
                 <br>
                 <ul>
                     <li class="informasjon">Meld deg på <a href="https://forms.gle/7kXy6WexM2HyeJyAA" target="blank">her</a></li>
