--- a/nadderud_sjakklubb/informasjon.html
+++ b/nadderud_sjakklubb/informasjon.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="index" lang="no">
+<html id="informasjondoc" lang="no">
     <head>
         <meta charset="UTF-8">
         <title>Nadderud sjakklubb</title>
@@ -34,7 +34,9 @@
         <br>
         <div id="hoved">
             <div>
-                <h1 class="overskrift">Informasjon</h1>
+                <div class="overskriftboks">
+                    <h1 class="overskrift">Informasjon</h1>
+                </div>
                 <br>
                 <p class="informasjon_topp">Nadderud sjakklubb er en av mange klubber på Nadderud vgs. Det er ingen obligatoriske møter, men det er veldig hyggelig hvis man blir med!</p>
                 <h2 class="underoverskrift">Generelt</h2>
@@ -51,7 +53,15 @@
             </div>
         </div>  
 
+        <footer>
+            <div>
+                <a href="kilder.html">Kilder</a>
+            </div>
+        </footer>
+        
+
         <script src="script.js"></script>
     </body>
 
+    
 </html>
