--- a/nadderud_sjakklubb/kilder.html
+++ b/nadderud_sjakklubb/kilder.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="indexdoc" lang="no">
+<html id="kilderdoc" lang="no">
     <head>
         <meta charset="UTF-8">
         <title>Nadderud sjakklubb</title>
@@ -42,13 +42,10 @@
             </div>
         </div>  
 
-        <footer>
-            <a href="index.html">Tilbake til forsiden</a>
-            <a href="index.html">Om sjakklubben</a>
-            <a href="kilder.html">Kilder</a>
-            
-        </footer>
-
         <script src="script.js"></script>
     </body>
+
+    <footer>
+        <a href="kilder.html"></a>
+    </footer>
 </html>
