--- a/nadderud_sjakklubb/program.html
+++ b/nadderud_sjakklubb/program.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="index" lang="no">
+<html id="programdoc" lang="no">
     <head>
         <meta charset="UTF-8">
         <title>Nadderud sjakklubb</title>
@@ -34,7 +34,9 @@
         <br>
         <div id="hoved">
             <div>
-                <h1 class="overskrift">Program</h1>
+                <div class="overskriftboks">
+                    <h1 class="overskrift">Program</h1>
+                </div>
                 <br>
                 <p class="informasjon_topp">Her er programmet med turneringer og møter fremover.</p>   
             </div>
