--- a/nadderud_sjakklubb/påmelding.html
+++ b/nadderud_sjakklubb/påmelding.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="index" lang="no">
+<html id="påmeldingdoc" lang="no">
     <head>
         <meta charset="UTF-8">
         <title>Nadderud sjakklubb</title>
@@ -34,11 +34,13 @@
         <br>
         <div id="hoved">
             <div>
-                <h1 class="overskrift">Påmelding</h1>
-                <p class="informasjon_topp">Det er bare å melde seg på, det er ikke bindende, men bare for å ha litt kontroll på hvor mange som er med i klubben</p>
+                <div class="overskriftboks">
+                    <h1 class="overskrift">Påmelding</h1>
+                </div>
+                <p class="informasjon_topp">Det er bare å melde seg på, det er ikke bindende, men bare for å ha litt kontroll på hvor mange som er med i klubben.</p>
                 <br>
                 <ul>
-                    <li class="informasjon">Meld deg på <a href="https://forms.gle/7kXy6WexM2HyeJyAA" target="blank">her</a></li>
+                    <li id="påmelding_informasjon">Meld deg på <a href="https://forms.gle/7kXy6WexM2HyeJyAA" target="blank">her</a></li>
                 </ul>
             </div>
         </div>  
