--- a/nadderud_sjakklubb/index.html
+++ b/nadderud_sjakklubb/index.html
@@ -42,12 +42,14 @@
             </div>
         </div>  
 
+        <!--
         <footer>
-            <a href="index.html">Tilbake til forsiden</a>
-            <a href="index.html">Om sjakklubben</a>
-            <a href="kilder.html">Kilder</a>
-            
-        </footer>
+            <div class="footerboks">
+                <a href="index.html">Tilbake til forsiden</a>
+                <a href="index.html">Om sjakklubben</a>
+                <a href="kilder.html">Kilder</a>
+            </div>
+        </footer>-->
 
         <script src="script.js"></script>
     </body>
