--- a/nadderud_sjakklubb/påmelding.html
+++ b/nadderud_sjakklubb/påmelding.html
@@ -37,10 +37,10 @@
                 <div class="overskriftboks">
                     <h1 class="overskrift">Påmelding</h1>
                 </div>
-                <p class="informasjon_topp">Det er bare å melde seg på, det er ikke bindende, men bare for å ha litt kontroll på hvor mange som er med i klubben.</p>
+                <p class="påmelding_informasjon">Det er bare å melde seg på, det er ikke bindende, men bare for å ha litt kontroll på hvor mange som er med i klubben.</p>
                 <br>
                 <ul>
-                    <li id="påmelding_informasjon">Meld deg på <a href="https://forms.gle/7kXy6WexM2HyeJyAA" target="blank">her</a></li>
+                    <li class="påmelding_informasjon">Meld deg på <a href="https://forms.gle/1Pnu1cWWmBQNhXtz9" target="blank">her</a></li>
                 </ul>
             </div>
         </div>  
