--- a/nadderud_sjakklubb/index.html
+++ b/nadderud_sjakklubb/index.html
@@ -14,12 +14,7 @@
                 <h4><a href="index.html">Nadderud sjakklubb</a></h4>
             </div>
             <ul class="meny-lenker">
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <li><a href="informasjon.html">Informasjon</a></li>
+                <li id="øverste_lenke"><a href="informasjon.html">Informasjon</a></li>
                 <li ><a href="påmelding.html">Påmelding</a></li>
                 <li><a href="program.html">Program</a></li>
                 <li><a href="sjakknøtter.html">Sjakknøtter</a></li>
