--- a/eventyrspillet/index.html
+++ b/eventyrspillet/index.html
@@ -16,6 +16,7 @@
   <!--
   <button onclick="playAudio()" type="button">Trykk her for å slå på musikk</button>
   <button onclick="pauseAudio()" type="button">Trykk her for å slå av musikk</button>-->
+  <button id="myBtn" onclick="myFunction()">Skru av musikk</button>
   <embed id="bakgrunnsmusikk" src="Lyder/bakgrunnsmusikk.mp3" loop="true" autostart="true" width="0" height="0">
   <video autoplay muted loop id="bakgrunnsvideo">
     <source src="Bilder/bakgrunn_video.mp4" type="video/mp4">
