--- a/eventyrspillet/index.html
+++ b/eventyrspillet/index.html
@@ -30,7 +30,7 @@
       
       <audio id="onclick" src="Lyder/onclick.wav"></audio>
     <a onclick="document.getElementById('onclick').play();"><button class="btn"></button></a>
-      <button class="btn">Option 2</button>
+      <button tabindex="0" class="btn">Option 2</button>
       <button class="btn">Option 3</button>
       <button class="btn">Option 4</button>
     </div>
