--- a/eventyrspillet/index.html
+++ b/eventyrspillet/index.html
@@ -10,14 +10,9 @@
   <title>Eventyrspillet</title>
 </head>
 <body>
-  <!--<video autoplay muted loop id="bakgrunn-video">
-    <source src="Bilder/bakgrunn_video.mp4" type="video/mp4">
-  </video>-->
   <!--
-  <button onclick="playAudio()" type="button">Trykk her for å slå på musikk</button>
-  <button onclick="pauseAudio()" type="button">Trykk her for å slå av musikk</button>-->
   <button id="myBtn" onclick="myFunction()">Skru av musikk</button>
-  <embed id="bakgrunnsmusikk" src="Lyder/bakgrunnsmusikk.mp3" loop="true" autostart="true" width="0" height="0">
+  <embed id="bakgrunnsmusikk" src="Lyder/bakgrunnsmusikk.mp3" loop="true" autostart="true" width="0" height="0">-->
   <video autoplay muted loop id="bakgrunnsvideo">
     <source src="Bilder/bakgrunn_video.mp4" type="video/mp4">
   </video>
@@ -25,14 +20,17 @@
     <h1>Eventyrspillet</h1>
 
   <div class="container">
-    <div id="text">Text</div>
-    <div id="option-buttons" class="btn-grid">
+    <!--<div id="text">Text</div>-->
+    <div id="tekst">Tekst</div>
+    <div id="valg-knapper" class="btn-grid">
       
-      <audio id="onclick" src="Lyder/onclick.wav"></audio>
-    <a onclick="document.getElementById('onclick').play();"><button class="btn"></button></a>
-      <button tabindex="0" class="btn">Option 2</button>
-      <button class="btn">Option 3</button>
-      <button class="btn">Option 4</button>
+    <!--<audio id="onclick" src="Lyder/onclick.wav"></audio>
+    <a onclick="document.getElementById('onclick').play();"><button class="btn"></button></a>-->
+
+      <button tabindex="0" class="btn">Valg 1</button>
+      <button class="btn">Valg 2</button>
+      <button class="btn">Valg 3</button>
+      <button class="btn">Valg 4</button>
     </div>
     
   </div>
