--- a/eventyrspillet/index.html
+++ b/eventyrspillet/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="style.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Orbitron">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Orbitron"> <!--Bruker sci fi font fra Google Fonts-->
   <script defer src="spill.js"></script>
   <link rel="icon" href="Bilder/ikon.jpg">
   <title>Eventyrspillet</title>
@@ -40,6 +40,7 @@
     
   </div>
 
+  <!--
   <button type="button" id="delete">Prøv lykken</button>
   <ul id="easterEggList">
     
@@ -93,6 +94,6 @@
     <li></li>
     <li></li>
     <li id="sist">Gratulerer! Du vant spillet</li>
-</ul>
+</ul>-->
 </body>
 </html>
