--- a/eventyrspillet/index.html
+++ b/eventyrspillet/index.html
@@ -18,7 +18,7 @@
     <source src="Bilder/bakgrunn_video.mp4" type="video/mp4">
   </video>
     
-    <h1>Eventyrsp<a id="easterEggColor">i</a>llet</h1>
+    <h1>Eventyrsp<a id="easterEggColor">i</a><p style="display:inline" id="antiEasterEgg">i</p>llet</h1>
     
     <body>
 
