--- a/eventyrspillet/index.html
+++ b/eventyrspillet/index.html
@@ -17,8 +17,9 @@
   <video autoplay muted loop id="bakgrunnsvideo">
     <source src="Bilder/bakgrunn_video.mp4" type="video/mp4">
   </video>
+  <!--<a id="easterEggColor">i</a>-->
     
-    <h1>Eventyrsp<a id="easterEggColor">i</a><p style="display:inline" id="antiEasterEgg">i</p>llet</h1>
+    <h1>Eventyrspillet</h1>
     
     <body>
 
